--- a/ethenic_files/ethenic.html
+++ b/ethenic_files/ethenic.html
@@ -120,20 +120,20 @@
         .trend {
             position: absolute;
             margin-left: 780px;
-            margin-top: 320px;
+            margin-top:260px;
         }
 
         .trend_name {
             position: absolute;
-            margin-left: 760px;
-            margin-top: 450px;
+            margin-left: 770px;
+            margin-top: 400px;
 
         }
 
         .fashion {
             position: absolute;
             margin-left: 1020px;
-            margin-top: 320px;
+            margin-top: 270px;
 
         }
 
@@ -144,7 +144,7 @@
         }     
         .main_img{
             position: absolute;
-         margin-top:110px;
+         margin-top:50px;
             border-radius: 0px 50px 50px 0px;
             margin-left: 20px;
             height: 400px;
@@ -482,7 +482,7 @@
                             src="../ethenic_files/ethenics/tops/t.png"></a>
                     <button class="buttons">Top's</button>
                 </div>
-                <div class="card"> <a href="shirts.html"><img class="images" src="./ethenics/shirts/sh1.png"></a>
+                <div class="card"> <a href="shirt.html"><img class="images" src="./ethenics/shirts/sh1.png"></a>
                     <button class="buttons">Shirt's</button>
                 </div>
                 <div class="card"> <a href="tshirt.html"><img class="images" src="./ethenics/tshirt/T.png"></a>
@@ -505,27 +505,13 @@
                 </div>
             </div>
 
-            <div class="Ethenic_Wear_For_Women_3">
-                <div class="card"><a href="plaso.html"><img class="images" src="./ethenics/plaso/p1.png"></a>
-                    <button class="buttons">Plaso's</button>
-                </div>
-                <div class="card"><a href="leggings.html"><img class="images" src="./ethenics/leggings/l1.png"></a>
-                    <button class="buttons">Laggings</button>
-                </div>
-                <div class="card"> <a href="jence.html"><img class="images" src="./ethenics/jence/g1.png"></a>
-                    <button class="buttons">jence</button>
-                </div>
-                <div class="card"> <a href="dhoti.html"><img class="images" src="./ethenics/Dhoties/dhoti.png"></a>
-                    <button class="buttons">Dhoti</button>
-                </div>
-            </div>
-
+          
         </div>
     </div>
 
     <div class="two_buttons">
         <div class="btn_design">
-            <a class="btn" href="in.html">⬅ Previous</a>
+            <a class="btn" href="index.html">⬅ Previous</a>
         </div>
         <div class="btn_design">
             <a class="btn" href="jacket.html"> Next ➡ </a>
