--- a/ethenic_files/shirt.html
+++ b/ethenic_files/shirt.html
@@ -189,7 +189,7 @@
 
   <div class="heding_div">
     <div class="heading">
- Womens T-Shirt
+ Womens Shirt
 </div>
 
 
@@ -203,7 +203,7 @@
 
 <div class="Ethenic_Wear_For_Women_1">
    
-       <div class="card"><img class="images" src="./ethenics/tshirt/tshirt1.png">
+       <div class="card"><img class="images" src="./ethenics/shirts/shirt9.png">
            <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -212,7 +212,7 @@
          <button class="buttons1">add to card</button>
        </div>
 
-        <div class="card"> <img class="images" src="./ethenics/tshirt/tshirt2.png">
+        <div class="card"> <img class="images" src="./ethenics/shirts/shirt2.png">
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
            </p>
@@ -220,7 +220,7 @@
              <button class="buttons1">add to card</button>
         </div>
 
-         <div class="card"><img class="images" src="./ethenics/tshirt/tshirt3.png">
+         <div class="card"><img class="images" src="./ethenics/shirts/shirt3.png">
           <h3 class="h4">sangriya</h3>
           <p class="paragraph">monochrome open front jacket<br>
            Rs 799 <del>1100</del>
@@ -229,7 +229,7 @@
              <button class="buttons1">add to card</button>
         </div>
 
-        <div class="card"><img class="images" src="./ethenics/tshirt/tshirt4.png"></a>
+        <div class="card"><img class="images" src="./ethenics/shirts/shirt4.png"></a>
           <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -240,7 +240,7 @@
 </div>
 
 <div class="Ethenic_Wear_For_Women_2 ">
-      <div class="card"><img class="images" src="./ethenics/tshirt/tshirt5.png"></a>
+      <div class="card"><img class="images" src="./ethenics/shirts/shirt5.png"></a>
         <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -249,7 +249,7 @@
             <button class="buttons1">add to card</button>
       </div> 
 
-      <div class="card"><img class="images" src="./ethenics/tshirt/tshirt6.png"></a>
+      <div class="card"><img class="images" src="./ethenics/shirts/shirt6.png"></a>
         <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -258,7 +258,7 @@
            <button class="buttons1">add to card</button>
       </div>
 
-      <div class="card"> <img class="images" src="./ethenics/tshirt/tshirt7.png"></a>
+      <div class="card"> <img class="images" src="./ethenics/shirts/shirt7.png"></a>
         <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -267,7 +267,7 @@
           <button class="buttons1">add to card</button>
     </div>
 
-    <div class="card"><img class="images" src="./ethenics/tshirt/tshirt8.png"></a>
+    <div class="card"><img class="images" src="./ethenics/shirts/shirt8.png"></a>
       <h3 class="h4">sangriya</h3>
            <p class="paragraph">monochrome open front jacket<br>
             Rs 799 <del>1100</del>
@@ -288,10 +288,10 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="ethenic.html">⬅ Previous</a>
+              <a class="btn" href="tops.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
-            <a class="btn" href="plaso.html"> Next ➡ </a>
+            <a class="btn" href="tshirt.html"> Next ➡ </a>
       </div>
 </div>
 
