--- a/ethenic_files/tops.html
+++ b/ethenic_files/tops.html
@@ -146,7 +146,7 @@
       position: relative;
       background-color: #eeffcc;
       height: 100px;
-      margin-top: 950px;
+      margin-top: 50px;
       display: flex;
       flex-direction: row;
       justify-content:space-evenly;
@@ -267,90 +267,18 @@
           <button class="buttons1">add to card</button>
     </div>
 
-    <div class="card"><img class="images" src="./ethenics/tops/top7.png"></a>
+    <div class="card"> <img class="images" src="./ethenics/tops/top7.png"></a>
       <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-         <button class="buttons">Buy Now</button>
-         <button class="buttons1">add to card</button>
-    </div>
-</div>
-
-<div class="Ethenic_Wear_For_Women_3">
-        <div class="card"><img class="images" src="./ethenics/tops/top8.png"></a>
-          <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-            <button class="buttons">Buy Now</button>
-            <button class="buttons1">add to card</button>
-      </div>
-
-          <div class="card"><img class="images" src="./ethenics/tops/top9.png"></a>
-            <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-            <button class="buttons">Buy Now</button>
-            <button class="buttons1">add to card</button>
-       </div> 
-
-       <div class="card"><img class="images" src="./ethenics/tops/top10.png"></a>
-        <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-            <button class="buttons">Buy Now</button>
-            <button class="buttons1">add to card</button>
-      </div>
-
-      <div class="card"> <img class="images" src="./ethenics/tops/t.png"></a>
-        <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-        <button class="buttons">Buy Now</button>
-        <button class="buttons1">add to card</button>
-    </div>
-</div>
-
-<div class="Ethenic_Wear_For_Women_2 ">
-    <div class="card"><img class="images" src="./ethenics/jacket/jacket13.png"></a>
-      <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-          <button class="buttons">Buy Now</button>
-          <button class="buttons1">add to card</button>
-    </div> 
-
-    <div class="card"><img class="images" src="./ethenics/jacket/jacket14.png"></a>
-      <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-         <button class="buttons">Buy Now</button>
-         <button class="buttons1">add to card</button>
-    </div>
-
-    <div class="card"> <img class="images" src="./ethenics/jacket/jacket15.png"></a>
-      <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
+         <p class="paragraph">monochrome open front jacket<br>
+          Rs 799 <del>1100</del>
+         </p>
         <button class="buttons">Buy Now</button>
         <button class="buttons1">add to card</button>
   </div>
 
-  <div class="card"><img class="images" src="./ethenics/jacket/jacket16.png"></a>
-    <h3 class="h4">sangriya</h3>
-           <p class="paragraph">monochrome open front jacket<br>
-            Rs 799 <del>1100</del>
-           </p>
-       <button class="buttons">Buy Now</button>
-       <button class="buttons1">add to card</button>
-  </div>
+
+
+
 </div>
 
 </div>
@@ -358,10 +286,10 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="ethenic.html">⬅ Previous</a>
+              <a class="btn" href="jacket.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
-            <a class="btn" href="plaso.html"> Next ➡ </a>
+            <a class="btn" href="shirt.html"> Next ➡ </a>
       </div>
 </div>
 
