create sign in form

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -129,21 +129,10 @@
         margin-bottom: 10px;
         font-weight: 800px;
       }
-      .buy-button {
-        display: block;
-        width: 100%;
-        padding: 10px;
-        background-color: #8abce3;
-        color: #0e0d0d;
-        border: none;
-        font-size: 16px;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      .Add-to-cart{
+      .buy-button{
         display: block;
         margin-top: 5px;
-        width: 100%;
+        width: 100px;
         padding: 10px;
         background-color: #d86bc4;
         color: #333;
@@ -152,6 +141,27 @@
         font-weight: 400;
         border-radius: 5px;
         cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+      
+      }
+      .Add-to-cart{
+        display: block;
+        margin-top: 5px;
+        width: 100px;
+        padding: 10px;
+        background-color: #7fceee;
+        color: #333;
+        border: none;
+        font-size: 16px;
+        font-weight: 400;
+        border-radius: 5px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+      
       }
     </style>
   </head>
@@ -677,7 +687,7 @@
       <h2 class="card-title">Kid's Wear </h2>
       <p class="card-price">Price rs 1999/-</p>
       <button class="buy-button">Buy Now</button>
-      <button class="Add-to-cart">Add to cart</button>
+      <button class="buy-button">Add to cart</button>
     </div>
 </div>
  </div>
