--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 
 <body class="body">
-    <div align="center" class="top-heading">
-        <marquee width="60%" class="rtc">
+    <div class="top-heading">
+        <marquee width="60%" class="rtc" align="center">
             <h1><b>WEL-COME TO RTC FASHION CLUB</b></h1>
         </marquee>
+        <a href="./pages in navbar/signup.html" class="categories-1">
+            <button class="sign-up">Sign Up</button>
+        </a>
+
+        <a href="./pages in navbar/signin.html" class="categories-1">
+            <button class="sign-in">Sign In</button>
+        </a>
     </div>
     <div class="navbar">
 
@@ -30,16 +37,10 @@
         <a href="./pages/Notification.html">
             <img src="./images/notification.png" class="home" />
 
-            <a href="/pages in navbar/sign-up.html" class="categories-1">
-                <h3 class="sign-up">&nbsp;&nbsp; Sign&nbsp;up&nbsp;&nbsp;</h3>
             </a>
 
             <a href="./pages in navbar/addtocart.html">
                 <img src="./images/add-to-cart.png" class="add-to-cart" /></a>
-
-            <a href="../pages in navbar/sign-in.html" class="categories-1">
-                <h3 class="sign-in">&nbsp;&nbsp; Sign&nbsp;in&nbsp;&nbsp;</h3>
-            </a>
 
             <a href="./pages in navbar/return.html" class="categories-1">
                 <h3 class="return-order">Return Order</h3>
