added more changes in dress lehenga and other

--- a/ethenic_files/saree.html
+++ b/ethenic_files/saree.html
@@ -283,10 +283,10 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="jacket.html">⬅ Previous</a>
+              <a class="btn" href="tshirt.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
-            <a class="btn" href="shirt.html"> Next ➡ </a>
+            <a class="btn" href="kurta.html"> Next ➡ </a>
       </div>
 </div>
 
