--- a/categories pages/footwere.html
+++ b/categories pages/footwere.html
@@ -150,7 +150,7 @@
      
         width: 100px;
         padding: 10px;
-        background-color: #d86bc4;
+        background-color: #df50c5;
         color: #333;
         border: none;
         font-size: 16px;
