--- a/Jwellary_pages/daimond.html
+++ b/Jwellary_pages/daimond.html
@@ -93,7 +93,7 @@
         <div class="item"><img src="../images/images_jwellary/D1.jpg" height="130px">
             <br/>
             <del>₹4000 </del> <br/>₹3500 <br/>
-            <button class="btn"> Buy Now</button> <br/>
+            <a href="../buy.html"> <button class="btn"> Buy Now</button> </a><br/>
             <button><a href="../pages in navbar/addtocart.html">Add To Cart</a></button>
         </div>
         <div class="item"><img src="../images/images_jwellary/D10.jpg" height="130px">
