Page Sign up ,provide path inOption Sign in

--- a/pages in navbar/signup.html
+++ b/pages in navbar/signup.html
@@ -84,7 +84,7 @@ a {
 <button type="submit" class="registerbtn">Sign Up</button>
 </div>
 <div class="signin">
-<p>Already have an account? <a href="#">Sign in</a>.</p>
+<p>Already have an account? <a href="./signin.html">Sign in</a>.</p>
 </div>
 </form>
 </body>
