add mens suits pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
     </div>
 
-    <h1 class="heading-categori"><b>Categories</b></h1>
+    <h1 class="heading-categori"><i>__________________________________________.Categories.___________________________________________</i></h1>
 
     <!--categories add-->
     <div class="categories-container">
