--- a/categories pages/bags.html
+++ b/categories pages/bags.html
@@ -64,16 +64,16 @@
     color: white;
     border-radius: 3px;
     border-style: solid;
-    background-color: rgb(169, 206, 33);
+    background-color: rgb(240, 9, 163);
     margin-left: 8px;
 }
 .View-btn{
     height: 30px;
     width: 100px;
-    color: white;
+    color: rgb(5, 5, 5);
     border-radius: 3px;
     border-style: solid;
-    background-color: rgb(214, 172, 20);
+    background-color: rgb(255, 255, 255);
     margin-left: 8px;
 }
 .div-2{
@@ -207,7 +207,7 @@ border-style: solid ;
          </a>
         <form id="form"> 
             <input type="search" id="query" name="q" placeholder="Search here ...." class="search-bar">
-            <button class="search-button">Search</button>
+            <button class="search-button">Search</button></a>
           </form>
 
           <a href="../pages/Notification.html">
@@ -241,25 +241,25 @@ border-style: solid ;
         <div>
              <img src="../images/women USB Charging Waterproof.webp" class="categories-card" />
                 <h class="categories-card-title-1">Women USBCharging Waterproof<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 800/- only </h><br>
-                <button class="buy-btn">Buy Now</button>
+                <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
                 <button class="View-btn">Add to Cart</button>
         </div>
         <div>
             <img src="../images/Men Women Vintage Casual.webp" class="categories-card" />
                <h class="categories-card-title-1">&nbsp &nbsp &nbsp Men Women Vintage Casual<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1200/- only </h><br>
-               <button class="buy-btn">Buy Now</button>
+               <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
                <button class="View-btn">Add to Cart</button>
        </div>
        <div>
         <img src="../images/Travel Rucksack Shoulder For Girls.jpg" class="categories-card" />
            <h class="categories-card-title-1"> &nbsp &nbsp  &nbsp  &nbspTravel Rucksack For Girls <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1100/- Only</h><br>
-           <button class="buy-btn">Buy Now</button>
+           <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
            <button class="View-btn">Add to Cart</button>
        </div>
        <div>
        <img src="../images/Canvas Attractive Collage Bags for Girls.jpg" class="categories-card" />
           <h class="categories-card-title-1"> &nbsp Canvas Attractive Collage Bags<br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1000/- Only</h><br>
-       <button class="buy-btn">Buy Now</button>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
        <button class="View-btn">Add to Cart</button></div></div><br>
        
 
@@ -269,26 +269,26 @@ border-style: solid ;
        <div>
         <img src="../images/bag2.jpg" class="categories-card" />
            <h class="categories-card-title-1"> &nbsp  &nbsp &nbsp  &nbsp Light Wight Laptop Bag <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 500/- Only</h><br>
-           <button class="buy-btn">Buy Now</button>
+           <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
            <button class="View-btn">Add to Cart</button>
    </div>
    <div>
        <img src="../images/bag6.jpg" class="categories-card" />
           <h class="categories-card-title-1"> &nbsp laptop bag Black color for mens <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 623/- Only</h><br>
-          <button class="buy-btn">Buy Now</button>
+          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
           <button class="View-btn">Add to Cart</button>
   </div>
   <div>
    <img src="../images/bag7.jpg" class="categories-card" />
       <h class="categories-card-title-1"> &nbsp  &nbsp &nbsp  &nbsp laptop bag With charger <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 700/- Only</h><br>
-      <button class="buy-btn">Buy Now</button>
+      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
       <button class="View-btn">Add to Cart</button>
   </div>
 
   <div>
     <img src="../images/bag8.jpg" class="categories-card" />
        <h class="categories-card-title-1"> &nbsp  &nbsp &nbsp  &nbsp  &nbsp &nbsp Black Collage Back <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 900/- Only</h><br>
-       <button class="buy-btn">Buy Now</button>
+       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
        <button class="View-btn">Add to Cart</button>
 </div></div>
 
@@ -297,26 +297,26 @@ border-style: solid ;
     <div>
      <img src="../images/Zouk-multicolor Mandala Print.webp" class="categories-card" />
         <h class="categories-card-title-1"> &nbsp  &nbspZouk-multicolor Mandala Print <br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 890/- Only</h><br>
-        <button class="buy-btn">Buy Now</button>
+        <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
         <button class="View-btn">Add to Cart</button>
 </div>
 <div>
     <img src="../images/Spotic Women Black Handbag.webp" class="categories-card" />
        <h class="categories-card-title-1"> &nbsp  &nbsp Spotic Women Black Handbag <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 549/- Only</h><br>
-       <button class="buy-btn">Buy Now</button>
+       <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
        <button class="View-btn">Add to Cart</button>
 </div>
 <div>
 <img src="../images/Misska Women Green bag.webp" class="categories-card" />
    <h class="categories-card-title-1"> &nbsp  &nbsp &nbsp  &nbspMisska Women Green bag <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 2000/- Only</h><br>
-   <button class="buy-btn">Buy Now</button>
+   <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
    <button class="View-btn">Add to Cart</button>
 </div>
 
 <div>
  <img src="../images/Devd Women Grey Satchel.webp" class="categories-card" />
     <h class="categories-card-title-1"> &nbsp  &nbsp &nbsp Devd Women Grey Satchel <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 2200/- Only</h><br>
-    <button class="buy-btn">Buy Now</button>
+    <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
     <button class="View-btn">Add to Cart</button>
 </div></div>
 <footer>
