modified bags Category

--- a/categories pages/bags.html
+++ b/categories pages/bags.html
@@ -25,7 +25,7 @@
 .categories-container-bag{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 60px;
     display: flex;
     flex-direction: row;
@@ -66,6 +66,7 @@
     border-style: solid;
     background-color: rgb(240, 9, 163);
     margin-left: 8px;
+    margin-top: 10px;
 }
 .View-btn{
     height: 30px;
@@ -79,7 +80,7 @@
 .div-2{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 30px;
     display: flex;
     flex-direction: row;
@@ -182,7 +183,7 @@ border-style: solid ;
 .div-3{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 30px;
     display: flex;
     flex-direction: row;
