video tag and etc

--- a/categories pages/bags.html
+++ b/categories pages/bags.html
@@ -25,7 +25,7 @@
 .categories-container-bag{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 60px;
     display: flex;
     flex-direction: row;
@@ -66,6 +66,7 @@
     border-style: solid;
     background-color: rgb(240, 9, 163);
     margin-left: 8px;
+    margin-top: 10px;
 }
 .View-btn{
     height: 30px;
@@ -79,7 +80,7 @@
 .div-2{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 30px;
     display: flex;
     flex-direction: row;
@@ -182,7 +183,7 @@ border-style: solid ;
 .div-3{
     margin-left: 30px;
     margin-right: 30px;
-    height: 350px;
+    height: 400px;
     margin-top: 30px;
     display: flex;
     flex-direction: row;
@@ -319,10 +320,7 @@ border-style: solid ;
     <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
     <button class="View-btn">Add to Cart</button>
 </div></div>
-<footer>
-    <p>Author: Hege Refsnes<br>
-    <a href="mailto:hege@example.com">hege@example.com</a></p>
-  </footer>
+
 
 </body>
 </html>
