--- a/Jwellary_pages/silver.html
+++ b/Jwellary_pages/silver.html
@@ -78,7 +78,7 @@
         <div class="item"><img src="../images/images_jwellary/s5.jpg" height="130px"><br/>
             <del>₹4000 </del> <br/>₹3500 <br/>
             <button class="btn"> Buy Now</button> <br/>
-            <button><a href="../pages in navbar/addtocart.html">Add To Cart</a></button> </div>
+            <a href="../pages in navbar/addtocart.html"><button>Add To Cart</button></a> </div>
         <div class="item"><img src="../images/images_jwellary/s2.jpg" height="130px" width="190px"><br/>
             <del>₹4000 </del> <br/>₹3500 <br/>
             <button class="btn"> Buy Now</button> <br/>
