deleted some files

--- a/ethenic_files/tshirt.html
+++ b/ethenic_files/tshirt.html
@@ -298,7 +298,7 @@
               <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
-            <a class="btn" href="plaso.html"> Next ➡ </a>
+            <a class="btn" href="saree.html"> Next ➡ </a>
       </div>
 </div>
 
