button name changes

--- a/ethenic_files/kurta.html
+++ b/ethenic_files/kurta.html
@@ -283,7 +283,7 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="saree.html">⬅ Previous</a>
+              <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
             <a class="btn" href="lehenga.html"> Next ➡ </a>
