--- a/ethenic_files/shirt.html
+++ b/ethenic_files/shirt.html
@@ -288,7 +288,7 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="tops.html">⬅ Previous</a>
+              <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
             <a class="btn" href="tshirt.html"> Next ➡ </a>
