--- a/ethenic_files/tops.html
+++ b/ethenic_files/tops.html
@@ -286,7 +286,7 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="jacket.html">⬅ Previous</a>
+              <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
             <a class="btn" href="shirt.html"> Next ➡ </a>
