--- a/ethenic_files/dress.html
+++ b/ethenic_files/dress.html
@@ -189,7 +189,7 @@
 
   <div class="heding_div">
     <div class="heading">
- Womens Saree
+ Womens Dresses
 </div>
 
 
@@ -283,7 +283,7 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="lehenga.html">⬅ Previous</a>
+              <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
             <a class="btn" href="ethenic.html"> Next ➡ </a>
