--- a/ethenic_files/saree.html
+++ b/ethenic_files/saree.html
@@ -283,7 +283,7 @@
 
 <div class="two_buttons">
       <div class="btn_design">
-              <a class="btn" href="tshirt.html">⬅ Previous</a>
+              <a class="btn" href="ethenic.html">⬅ Previous</a>
       </div>
      <div class="btn_design">
             <a class="btn" href="kurta.html"> Next ➡ </a>
