change footwear page

--- a/categories pages/bags.html
+++ b/categories pages/bags.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Page Title</title>
+tle>Page Title</title>
     <style>
 
     .second_div{
@@ -227,7 +224,10 @@ border-style: solid ;
 
                  <a href="../pages in navbar/return.html" class="categories-1"><h3 class="return-order">Return Order</h3></a>
         </div>
-        
+        <!DOCTYPE html>
+<html>
+<head>
+    <ti
 
     <h1 class="heading-bags">RTC Bags Fashion🎒🛍️</h1>
  
