provide path sign in button and sign up button

--- a/pages in navbar/signup.html
+++ b/pages in navbar/signup.html
@@ -72,17 +72,18 @@ a {
 <h1>Sign Up</h1>
 <form>
 <label for="email"><b>Email</b></label>
-<input type="text" placeholder="Enter email or phone...." name="email" required>
+<input type="text" placeholder="Enter email or phone...." name="email" >
 <label for="psw"><b>Password</b></label>
-<input type="password" placeholder="Enter Password" name="psw" required>
+<input type="password" placeholder="Enter Password" name="psw">
 <label for="psw-repeat"><b>Repeat Password</b></label>
-<input type="password"  placeholder="Repeat Password" name="psw-repeat" required>
+<input type="password"  placeholder="Repeat Password" name="psw-repeat">
 <label for="psw-repeat"><b>Phone no</b></label>
-<input type="text"  placeholder="Phone no" name="phone" required>
+<input type="text"  placeholder="Phone no" name="phone" >
 <hr>
 <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+<a href="../index.html">
 <button type="submit" class="registerbtn">Sign Up</button>
-</div>
+</div></a>
 <div class="signin">
 <p>Already have an account? 
     <a href="./signin.html">Sign in</a></p>
