added new accessories img

--- a/categories pages/bags.html
+++ b/categories pages/bags.html
@@ -1,4 +1,6 @@
-tle>Page Title</title>
+<html>
+<head>
+    <title>Bags</title>
     <style>
 
     .second_div{
@@ -191,6 +193,12 @@ border-style: solid ;
     
  }
 
+ .ft-heading{
+  background-color: rgb(212, 227, 239);
+    border-radius: 15px;
+    text-align: center;
+    height: 60px;
+ }
     </style>
 </head>
 <body class="body">
@@ -223,16 +231,9 @@ border-style: solid ;
                 </a>
 
                  <a href="../pages in navbar/return.html" class="categories-1"><h3 class="return-order">Return Order</h3></a>
-        </div>
-        <!DOCTYPE html>
-<html>
-<head>
-    <ti
-
-    <h1 class="heading-bags">RTC Bags Fashion🎒🛍️</h1>
- 
+        </div> 
 </div>
-
+      <h1 class="ft-heading">RTC Bags Fashion🎒🛍️</h1>   
       <div class="second_div">
            <img src="../images/Bag Banner.jpg" class="offer-img">
       </div>
