all accessories home page img added

--- a/categories pages/acessories.html
+++ b/categories pages/acessories.html
@@ -312,52 +312,52 @@ margin-top: 7px;
  <!--div 3-->
  <div class="categories-container-accessories">
   <div>
-       <img src="../images/sandal.jpg" class="categories-card" />
-          <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 800/- only </h><br>
+       <img src="../categories pages/accessories-img/Leather Wallet for Men 5 Card Slots.jpg" class="categories-card" />
+          <h class="categories-card-title-1">Leather Wallet for Men 5 Card Slots<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 800/- only </h><br>
           <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
           <button class="View-btn">Add to Cart</button>
   </div>
   <div>
-      <img src="../images/trendy.webp" class="categories-card" />
-         <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1200/- only </h><br>
+      <img src="../categories pages/accessories-img/BULLIANT Belt for Men 2Pack, Mens Stretch Braided Web Belt Elastic for Casual Golf Hunting Pants Jeans.jpg" class="categories-card" />
+         <h class="categories-card-title-1">&nbsp &nbsp BULLIANT Belt for Men <br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1200/- only </h><br>
          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
          <button class="View-btn">Add to Cart</button>
  </div>
  <div>
-  <img src="../images/sandal1.webp" class="categories-card" />
-     <h class="categories-card-title-1"> &nbsp &nbsp  &nbsp Women Trendy Sandal <br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1100/- Only</h><br>
+  <img src="../categories pages/accessories-img/Lussoro Quantum Science Black Bio Magnetic Energy Pendant for Men and Women - Pack of 2.jpg" class="categories-card" />
+     <h class="categories-card-title-1"> &nbsp &nbsp  &nbsp Lussoro Quantum Science Black Bio Magnetic <br>  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1100/- Only</h><br>
      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
      <button class="View-btn">Add to Cart</button>
  </div>
  <div>
- <img src="../images/attractivejuttis.webp" class="categories-card" />
-    <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1000/- Only</h><br>
+ <img src="../categories pages/accessories-img/Black Cross and Wings Hanging Chain Sherwani Brooch.jpg" class="categories-card" />
+    <h class="categories-card-title-1"> &nbsp Black Cross and Wings<br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1000/- Only</h><br>
     <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
  <button class="View-btn">Add to Cart</button></div></div><br>
 
  <!--div 4-->
  <div class="categories-container-accessories">
   <div>
-       <img src="../images/sandal.jpg" class="categories-card" />
-          <h class="categories-card-title-1">Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 800/- only </h><br>
+       <img src="../categories pages/accessories-img/Certified Gems Black Non Precious Metal Kamal Gatta Lotus Seeds Mala for Men.jpg" class="categories-card" />
+          <h class="categories-card-title-1">Certified Gems Black Non Precious Metal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 800/- only </h><br>
           <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
           <button class="View-btn">Add to Cart</button>
   </div>
   <div>
-      <img src="../images/bellies.webp" class="categories-card" />
-         <h class="categories-card-title-1">&nbsp &nbsp &nbsp Women Trendy Sandal<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1200/- only </h><br>
+      <img src="../categories pages/accessories-img/Gift Hamper for Men  Blue Leather Wallet , Keychain & Pen.jpg" class="categories-card" />
+         <h class="categories-card-title-1">&nbsp &nbsp &nbspGift Hamper for Men  Blue Leather Wallet<br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1200/- only </h><br>
          <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
          <button class="View-btn">Add to Cart</button>
  </div>
  <div>
-  <img src="../images/footwere.jpg" class="categories-card" />
-     <h class="categories-card-title-1"> &nbsp &nbsp  &nbsp  Women Trendy Sandal<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1100/- Only</h><br>
+  <img src="../categories pages/accessories-img/Impression Stylish Evil Eye Multi-Layer Leaf Charm Wrap Leather Bracelet for Men.jpg" class="categories-card" />
+     <h class="categories-card-title-1"> &nbsp &nbsp  &nbsp  Impression Stylish Evil Eye Multi-Layer Leaf Charm<br> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1100/- Only</h><br>
      <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
      <button class="View-btn">Add to Cart</button>
  </div>
  <div>
- <img src="../images/attractivejuttis.webp" class="categories-card" />
-    <h class="categories-card-title-1"> &nbsp Women Trendy Sandal<br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1000/- Only</h><br>
+ <img src="../categories pages/accessories-img/Marino’s Men Genuine Leather Dress Belt with Single Prong Buckle.jpg" class="categories-card" />
+    <h class="categories-card-title-1"> Marino’s Men Genuine Leather Dress Belt <br> &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp Ru 1000/- Only</h><br>
     <a href="../categories pages/bagreference.html"><button class="buy-btn">Buy Now</button></a>
  <button class="View-btn">Add to Cart</button></div></div><br>
  
