--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -163,6 +163,169 @@
         justify-content: space-around;
       
       }
+      .footer-logo {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.marq {
+    background-color: rgb(219, 242, 242);
+}
+
+.image {
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.img1 {
+    height: 300px;
+    width: 300px;
+    box-shadow: 0px 0px 10px #dbe272;
+}
+
+.sore-img {
+    height: 100px;
+    width: 100px;
+}
+
+.add {
+    height: 300px;
+    margin-bottom: 150px;
+    margin-top: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-right: 100px;
+    background-color: rgb(232, 241, 247);
+    margin-left: 100px;
+    border-radius: 30px;
+    margin-bottom: 40px;
+}
+
+.add-img {
+    margin-top: 20px;
+    height: 350px;
+    width: 430px;
+}
+
+.add-img2 {
+    height: 300px;
+    width: 300px;
+    border-radius: 30px;
+}
+
+.u-list {
+    margin-top: 60px;
+    font-size: 30px;
+    margin-right: 5px;
+}
+
+.second_div {
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-left: 180px;
+    margin-right: 180px;
+}
+
+.offer-img {
+    margin-top: 40px;
+    height: 400px;
+    display: flex;
+    border-radius: 10px;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+
+.footer {
+    position: relative;
+    background-color: #040436;
+    height: 300px;
+    margin-top: 80px;
+}
+
+.about {
+    position: absolute;
+    top: 25px;
+    margin-left: 80px;
+    color: #e6e6ff;
+}
+
+.about-list {
+    position: absolute;
+    top: 80px;
+    margin-left: 76px;
+    color: #e6e6ff;
+    font-size: 20px;
+}
+
+.help {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 25px;
+}
+
+.help-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.policy {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 25px;
+}
+
+.policy-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.social {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 25px;
+}
+
+.social-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.contact {
+    margin-left: 50px;
+}
+
+.call {
+    text-decoration: none !important;
+}
+
+.anc {
+    text-decoration: none !important;
+    color: white;
+}
     </style>
   </head>
   <body>
@@ -691,4 +854,31 @@
     </div>
 </div>
  </div>
+ <div class="footer">
+  <h2 class="about">CONTACT</h2><br>
+  <p class="about-list">
+      <a href="mailto:tinukohare@gmail.com" class="anc">
+          <img src="./images/email.png" height="30px" alt="E-mail" /> E-mail: rtcfashionclub@gmail.com
+      </a><br>
+      <a href="tel:+91-8459562384" class="anc">
+          <img src="./images/call.png" height="30px" alt="Call" />
+          <h class="call">Call: +91 8459562384<br></a>
+
+      <a href="https://goo.gl/maps/XYayxp7jYfVYHPRCA" class="anc">
+          <img src="./images/location.png" height="30px" /> Address: Nagpur
+      </a><br></p>
+
+
+  <h2 class="help"> HELP</h2>
+  <p class="help-list">Payments<br> Shiping <br>Customer Service <br> FAQ</p>
+
+  <h2 class="policy"> POLICY</h2>
+  <p class="policy-list">Return Policy<br>Terms Of Use <br> Security <br> Privacy</p>
+
+
+  <h2 class="social"> SOCIAL</h2>
+  <p class="social-list">Facebook<br>Twitter <br>You Tube</p>
+</div>
+    </body>
+  </html>
          
