--- a/categories pages/winter.html
+++ b/categories pages/winter.html
@@ -79,9 +79,13 @@
         padding: 0;
       }
       header {
-        background-color: #8e97d6;
-        padding: 20px;
+        margin: 10px;
+        background-color: #67afce;
+       font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: #a451a2 2px 2px 2px 2px;
+        border: solid black 2px;
       }
       h1 {
         font-size: 48px;
@@ -128,29 +132,190 @@
         margin-bottom: 10px;
         font-weight: 800px;
       }
+     
       .buy-button {
-        display: block;
-        width: 100%;
-        padding: 10px;
-        background-color: #8abce3;
-        color: #333;
-        border: none;
-        font-size: 16px;
-        border-radius: 5px;
-        cursor: pointer;
+      height: 35px;
+      width: 100px;
+      color: white;
+      border-radius: 3px;
+      border-style: solid;
+      background-color: rgb(240, 9, 163);
+      margin-left: 12px;
+      cursor: pointer;
       }
-      .Add-to-cart{
-        display: block;
-        margin-top: 5px;
-        font-size: 16px;
-        width: 100%;
-        padding: 10px;
-        background-color: #d86bc4;
-        color: #333;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
+      .Add-to-cart {
+        height: 35px;
+      width: 100px;
+      color: rgb(5, 5, 5);
+      border-radius: 3px;
+      border-style: solid;
+      background-color: white;
+      margin-left: 12px;
+      cursor: pointer;
       }
+      .footer-logo {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.marq {
+    background-color: rgb(219, 242, 242);
+}
+
+.image {
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.img1 {
+    height: 300px;
+    width: 300px;
+    box-shadow: 0px 0px 10px #dbe272;
+}
+
+.sore-img {
+    height: 100px;
+    width: 100px;
+}
+
+.add {
+    height: 300px;
+    margin-bottom: 150px;
+    margin-top: 70px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+    margin-right: 100px;
+    background-color: rgb(232, 241, 247);
+    margin-left: 100px;
+    border-radius: 30px;
+    margin-bottom: 40px;
+}
+
+.add-img {
+    margin-top: 20px;
+    height: 350px;
+    width: 430px;
+}
+
+.add-img2 {
+    height: 300px;
+    width: 300px;
+    border-radius: 30px;
+}
+
+.u-list {
+    margin-top: 60px;
+    font-size: 30px;
+    margin-right: 5px;
+}
+
+.second_div {
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    margin-left: 180px;
+    margin-right: 180px;
+}
+
+.offer-img {
+    margin-top: 40px;
+    height: 400px;
+    display: flex;
+    border-radius: 10px;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+
+.footer {
+    position: relative;
+    background-color: #040436;
+    height: 300px;
+    margin-top: 80px;
+}
+
+.about {
+    position: absolute;
+    top: 25px;
+    margin-left: 80px;
+    color: #e6e6ff;
+}
+
+.about-list {
+    position: absolute;
+    top: 80px;
+    margin-left: 76px;
+    color: #e6e6ff;
+    font-size: 20px;
+}
+
+.help {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 25px;
+}
+
+.help-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 500px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.policy {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 25px;
+}
+
+.policy-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 760px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.social {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 25px;
+}
+
+.social-list {
+    position: absolute;
+    color: #e6e6ff;
+    margin-left: 1000px;
+    top: 90px;
+    font-size: 20px;
+}
+
+.contact {
+    margin-left: 50px;
+}
+
+.call {
+    text-decoration: none !important;
+}
+
+.anc {
+    text-decoration: none !important;
+    color: white;
+}
     </style>
   </head>
   <body>
