changed color combinations

--- a/categories pages/kids.html
+++ b/categories pages/kids.html
@@ -80,7 +80,7 @@
       }
       header {
         margin: 10px;
-        background-color: #ff8ec8;
+        background-color: #f293c4;
         font-family: Georgia, 'Times New Roman', Times, serif;
         text-align: center;
         border-radius: 10px 10px 10px 10px;
